# openclaw-agent-claude

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  Makefile  README.md  SOUL.md  TOOLS.md  USER.md  docker-compose.yml
.archgate/adrs/: ARCH-001-session-isolation.md  ARCH-002-event-driven-monitoring.md  ARCH-003-review-scoring-system.md  ARCH-004-pipeline-runner.md  ARCH-005-secrets-never-in-git.md
.github/workflows/: ci.yml  pr-review.yml
factory/: .gitignore  Dockerfile  mix.exs
factory/config/: config.exs  dev.exs  runtime.exs  test.exs
factory/lib/: factory.ex
factory/lib/factory/: application.ex  mq_client.ex  mq_ws_client.ex
factory/lib/factory/api/: router.ex
factory/lib/factory/events/: bus.ex
factory/lib/factory/logging/: session_logger.ex
factory/lib/factory/review/: evaluator.ex  manager.ex  scoring.ex
factory/lib/factory/session/: manager.ex  worker.ex
factory/lib/factory/workspace/: plan.ex  tasks.ex
factory/test/: factory_test.exs
factory/test/factory/api/: router_test.exs
scripts/: Dockerfile  entrypoint.sh  setup.sh
skills/: session_spawn.json  session_spawn.md  session_spawn.sh
spec/: API.md  ARCHITECTURE.md  COMMUNICATION.md  CRON.md  HEARTBEAT.md  LEARNINGS.md  MEMORY.md  ORCHESTRATION.md  PIPELINES.md  SAFETY.md  TESTING.md  TROUBLESHOOTING.md  WORKFLOW.md
tools/pipeline_runner/: pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  cli.py  models.py  runner.py  steps.py
tools/pipeline_runner/tests/: test_models.py  test_runner.py  test_steps.py
(+6 files in other folders)
