[tool.poetry]
name = "pipeline-runner"
version = "0.1.0"
description = "Zero-install pipeline runner for the Software Factory. Validates architecture decisions, code quality, security, and testing."
authors = ["OpenClaw <noreply@openclaw.ai>"]
license = "MIT"
packages = [{include = "pipeline_runner"}]

[tool.poetry.scripts]
pipeline = "pipeline_runner.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
click = "^8.1"
rich = "^13.0"
httpx = "^0.27"
gitpython = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.24"
ruff = "^0.8"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=pipeline_runner --cov-report=term-missing --cov-fail-under=60"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "SIM", "ERA"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
